[gd_scene load_steps=17 format=2]

[ext_resource path="res://Cards/Card.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Cards/firework0000.png" type="Texture" id=2]
[ext_resource path="res://Graphics/Cards/front0000.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Cards/spiriticon0000.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Cards/lantern0000.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Cards/lightstall0000.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Cards/mooncakestall0000.png" type="Texture" id=7]
[ext_resource path="res://Graphics/Cards/picframe0000.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Cards/mooncrane0000.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Cards/dragon0000.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Cards/firecracker0000.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Cards/picback0000.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Cards/line0000.png" type="Texture" id=13]
[ext_resource path="res://Graphics/Cards/shadow0000.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 45 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 66 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 45 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Scaler" type="Node2D" parent="."]

[node name="Shadow" type="Sprite" parent="Scaler"]
self_modulate = Color( 1, 1, 1, 0.607843 )
position = Vector2( 0, -3 )
scale = Vector2( 0.098, 0.1 )
texture = ExtResource( 14 )

[node name="CardFront" type="Sprite" parent="Scaler"]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="Name" type="Node2D" parent="Scaler/CardFront"]
position = Vector2( -37.5, -375 )

[node name="Dragon" type="Sprite" parent="Scaler/CardFront/Name"]
visible = false
texture = ExtResource( 10 )

[node name="Firecracker" type="Sprite" parent="Scaler/CardFront/Name"]
visible = false
texture = ExtResource( 11 )

[node name="Firework" type="Sprite" parent="Scaler/CardFront/Name"]
visible = false
texture = ExtResource( 2 )

[node name="Lantern" type="Sprite" parent="Scaler/CardFront/Name"]
texture = ExtResource( 5 )

[node name="LightStall" type="Sprite" parent="Scaler/CardFront/Name"]
visible = false
texture = ExtResource( 6 )

[node name="MooncakeStall" type="Sprite" parent="Scaler/CardFront/Name"]
visible = false
position = Vector2( 0, -37.5 )
texture = ExtResource( 7 )

[node name="MoonCrane" type="Sprite" parent="Scaler/CardFront/Name"]
visible = false
texture = ExtResource( 9 )

[node name="Pic" type="Node2D" parent="Scaler/CardFront"]
position = Vector2( 0, -125 )

[node name="PicBack" type="Sprite" parent="Scaler/CardFront/Pic"]
texture = ExtResource( 12 )

[node name="PicFrame" type="Sprite" parent="Scaler/CardFront/Pic"]
texture = ExtResource( 8 )

[node name="SpiritCost" type="Sprite" parent="Scaler/CardFront"]
position = Vector2( 237.5, -187.5 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Scaler/CardFront/SpiritCost"]
margin_left = -25.0
margin_top = -62.5
margin_right = 15.0
margin_bottom = -48.5
text = "5"
align = 1

[node name="Line" type="Sprite" parent="Scaler/CardFront"]
position = Vector2( 0, 350 )
texture = ExtResource( 13 )

[node name="CardBack" type="Sprite" parent="Scaler"]
visible = false
self_modulate = Color( 0, 0, 0, 0.219608 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="CardBack2" type="Sprite" parent="Scaler"]
visible = false
self_modulate = Color( 0, 0, 0, 0.219608 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 3 )

[node name="MouseSelectArea" type="Area2D" parent="Scaler"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Scaler/MouseSelectArea"]
visible = false
shape = SubResource( 2 )

[node name="MouseHoverArea" type="Area2D" parent="."]

[node name="ActiveHoverShape" type="CollisionShape2D" parent="MouseHoverArea"]
visible = false
shape = SubResource( 1 )

[node name="InactiveHoverShape" type="CollisionShape2D" parent="MouseHoverArea"]
shape = SubResource( 3 )
disabled = true

[connection signal="input_event" from="Scaler/MouseSelectArea" to="." method="_on_MouseSelectArea_input_event"]
[connection signal="mouse_exited" from="Scaler/MouseSelectArea" to="." method="_on_MouseSelectArea_mouse_exited"]
[connection signal="mouse_entered" from="MouseHoverArea" to="." method="_on_MouseHoverArea_mouse_entered"]
[connection signal="mouse_exited" from="MouseHoverArea" to="." method="_on_MouseHoverArea_mouse_exited"]
